src/css/style.css
:root {
  --bs-black: #000;
  --bs-brown: #393423;
  --bs-grey-2: #444;
  --bs-grey-3: #ccc;
  --bs-grey-4: #222;
  --bs-grey-5: #333;
  --bs-grey-6: #999;
  --bs-cape-honey: #ffe9ab;
  --bs-cerulean: #00aced;
  --bs-code-grey: #1d1d1d;
  --bs-chathams-blue: #0f4f7e;
  --bs-chathams-blue-2: #005999;
  --bs-chathams-blue-3: #87a7be;
  --bs-chathams-blue-4: #e1ebf4;
  --bs-crete: #4b5e26;
  --bs-light-green: #eaf0dc;
  --bs-dark-burgundy: #821206;
  --bs-emperor: #4f4f4f;
  --bs-madison: #093058;
  --bs-pampas: #f6f5f0;
  --bs-pablo: #73705f;
  --bs-white: #fff;
  --bs-pablo-2: #706d61;
  --bs-purple: #44136c;
  --bs-purple-2: #956cb7;
  --bs-gray-100: #f8f9fa;
  --bs-gray-200: #e9ecef;
  --bs-gray-300: #dee2e6;
  --bs-gray-400: #ced4da;
  --bs-gray-500: #adb5bd;
  --bs-gray-600: #6c757d;
  --bs-gray-700: #495057;
  --bs-gray-800: #343a40;
  --bs-gray-900: #212529;
  --bs-primary: #0d6efd;
  --bs-secondary: #6c757d;
  --bs-success: #4b5e26;
  --bs-info: #0dcaf0;
  --bs-warning: #ffc107;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212529;
  --bs-primary-rgb: 13, 110, 253;
  --bs-secondary-rgb: 108, 117, 125;
  --bs-success-rgb: 75, 94, 38;
  --bs-info-rgb: 13, 202, 240;
  --bs-warning-rgb: 255, 193, 7;
  --bs-danger-rgb: 220, 53, 69;
  --bs-light-rgb: 248, 249, 250;
  --bs-dark-rgb: 33, 37, 41;
  --bs-white-rgb: 255, 255, 255;
  --bs-black-rgb: 0, 0, 0;
  --bs-body-color-rgb: 33, 37, 41;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
    "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-serif: "Times New Roman", Times, serif;
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0.15),
    rgba(255, 255, 255, 0)
  );
  --bs-body-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  --bs-body-font-size: 1rem;
  --bs-body-font-weight: 400;
  --bs-body-line-height: 1.75;
  --bs-body-color: #212529;
  --bs-body-bg: #fff;
  --bs-border-width: 1px;
  --bs-border-style: solid;
  --bs-border-color: #dee2e6;
  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
  --bs-border-radius: 0.375rem;
  --bs-border-radius-sm: 0.25rem;
  --bs-border-radius-lg: 0.5rem;
  --bs-border-radius-xl: 1rem;
  --bs-border-radius-2xl: 2rem;
  --bs-border-radius-pill: 50rem;
  --bs-link-color: #005999;
  --bs-link-hover-color: #003e6b;
  --bs-code-color: #d63384;
  --bs-highlight-bg: #fff3cd;
}

/* Global styles */
* {
  box-sizing: border-box;
}

img {
  max-width: 100%;
}

body {
  font-family: var(--bs-body-font-family);
  font-size: 18px;
  margin: 0;
}

p {
  font-size: 1.3rem;
}

a:link,
a:visited {
  color: var(--bs-link-color);
}

a:hover {
  color: var(--bs-link-hover-color);
}

/* Skip links styling */
.skip-links ul {
  list-style-type: none;
  margin: 0;
  padding-left: 0;
}

.skip-links a {
  font-size: 11px;
  font-size: 0.6875rem;
  position: absolute;
  right: 20px;
  top: -200px;
  z-index: -1;
}

.skip-links a:focus {
  top: 2px;
  z-index: 9999;
}

.disclaimer {
  padding: 0.5rem;
}

/* Upper Header Styles */
.site-title {
  display: flex;
  align-items: center;
  text-decoration: none;
  font-weight: 600;
  margin-left: 1rem;
}
.site-title > span {
  font-size: 1.2rem;
  margin-left: 0.3em;
  color: white;
}

.logo {
  height: 0;
  width: 0;
  margin: 0.5em;
  display: inline-block;
  border-top: 34px solid var(--bs-light-green);
  border-left: 13px solid transparent;
  border-right: 13px solid transparent;
}
.global-header {
  display: flex;
  flex-direction: row;
  background-color: var(--bs-black);
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

.global-header-left {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  align-items: center;
  border-left: 1px solid var(--bs-grey-5);
}

.global-header-right {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin: 0 1rem;
}

#global-nav-toggle {
  display: flex;
  align-items: center;
  gap: 0.5em;
  background-color: var(--bs-black);
  color: white;
  border: none;
  font-size: 1.1rem;
  font-family: var(--bs-body-font-family);
}

.icon {
  width: 25px;
  height: 25px;
  background-color: var(--bs-black);
  fill: white;
}

.search-icon {
  width: 23px;
  height: 23px;
  margin-right: 1rem;
}

/* Image and banner styles */
.image-banner-wrapper {
  position: relative;
  display: block;
  width: 100%;
}

.image-banner-wrapper img {
  display: block;
  width: 100%;
  height: auto;
  max-height: 400px;
  object-fit: cover; 
}

.image-banner-text {
  display: flex;
  flex-direction: row;
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 0.75rem;
  align-items: center;
  font-family: Arial, sans-serif;
  gap: 1rem;
}

.image-banner-subtext p{
  display: flex;
  flex-direction: column;
  font-size: 0.9rem;
  color: rgb(216, 216, 216);
  font-family: var(--bs-body-font-family);
}

.image-banner-subtext p {
  margin: 0;
}

/* Lower Nav Styles */
.nav-links ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0.5rem 6rem;
  background-color: var(--bs-black);
  margin: 0 auto;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.nav-links ul li a {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  color: white;
  align-items: center;
}

.nav-links ul li {
  list-style: none;
}

/* Main Styles */
main {
  padding: 2rem;
}

.intro h1 {
  font-family: var(--bs-font-serif);
  font-size: 2rem;
  font-weight: 300;
  padding-bottom: 1rem;
}

/* Media Card Styles */
.media-card {
  margin-bottom: 1rem;
}
.media-card a {
  text-decoration: none;
  margin: 1rem 0;
}
.media-card img {
  width: 100%
}

.media-card h3 {
  color: black;
  font-family: Arial, sans-serif;
}

/* Footer Styles */
footer{
  padding: 1rem 2rem;
  background-color: #f2f1ed;
}
footer div{
  margin-bottom: 1rem;
}
footer section h3 {
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.4rem;
}

footer section h4, footer section p{
  margin: 0;
}


/* Utility styles */
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}



@media (min-width: 800px) {
  .info {
    display: flex;
    gap: 2rem; 
    justify-content: space-between;
  }

  .media-card {
    flex: 1 1 30%;
  }
}

